<?xml version="1.0"?>
<package>
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>The motion_planning package</description>

  <maintainer email="tfh@mit.edu">tfh</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
</package>
